feat(web-panel): config downloading
