# server/api/swagger.json
@@ -114,7 +114,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_nougght_monitoring-system_server_internal_transport_dto_types.AgentConfigBody"
+                            "$ref": "#/definitions/AgentConfigBody"
                         }
                     }
                 ],
@@ -122,7 +122,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_nougght_monitoring-system_server_internal_transport_dto_types.AgentConfigResponse"
+                            "$ref": "#/definitions/AgentConfigResponse"
                         }
                     },
                     "400": {
@@ -171,6 +171,28 @@
                 }
             }
         },
+        "AgentConfigBody": {
+            "type": "object",
+            "properties": {
+                "enrollmentKey": {
+                    "type": "string"
+                }
+            }
+        },
+        "AgentConfigResponse": {
+            "type": "object",
+            "properties": {
+                "enrollmentAddress": {
+                    "type": "string"
+                },
+                "enrollmentKey": {
+                    "type": "string"
+                },
+                "serverAddress": {
+                    "type": "string"
+                }
+            }
+        },
         "CreateAgentBody": {
             "type": "object",
             "required": [
@@ -214,28 +236,6 @@
         "gin.H": {
             "type": "object",
             "additionalProperties": {}
-        },
-        "github_com_nougght_monitoring-system_server_internal_transport_dto_types.AgentConfigBody": {
-            "type": "object",
-            "properties": {
-                "enrollmentKey": {
-                    "type": "string"
-                }
-            }
-        },
-        "github_com_nougght_monitoring-system_server_internal_transport_dto_types.AgentConfigResponse": {
-            "type": "object",
-            "properties": {
-                "enrollmentAddress": {
-                    "type": "string"
-                },
-                "enrollmentKey": {
-                    "type": "string"
-                },
-                "serverAddress": {
-                    "type": "string"
-                }
-            }
         }
     }
 }
